k8s-deploy/manifests/egov-app/egov-hello-error-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: egov-hello-error
  namespace: egov-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: egov-hello
      variant: error
  template:
    metadata:
      labels:
        app: egov-hello
        variant: error
    spec:
      containers:
      - name: egov-hello
        image: egovhello:k8s
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 120
          periodSeconds: 15
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
