k8s-deploy/manifests/egov-app/egov-hello-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: egov-hello
  namespace: egov-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: egov-hello
  template:
    metadata:
      labels:
        app: egov-hello
    spec:
      containers:
      - name: egov-hello
        image: egovhello:k8s
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 120
          periodSeconds: 15
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: egov-hello
  namespace: egov-app
spec:
  type: NodePort
  selector:
    app: egov-hello
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30086  # 노드포트를 30086으로 설정 (8086에 매핑)
