k8s-deploy/manifests/egov-app/egov-login-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: egov-login
  namespace: egov-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: egov-login
  template:
    metadata:
      labels:
        app: egov-login
    spec:
      containers:
      - name: egov-login
        image: egovlogin:k8s
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: egov-login
  namespace: egov-app
spec:
  selector:
    app: egov-login
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
