k8s-deploy/manifests/egov-app/egov-search-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: egov-search
  namespace: egov-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: egov-search
  template:
    metadata:
      labels:
        app: egov-search
    spec:
      containers:
      - name: egov-search
        image: egovsearch:k8s
        ports:
        - containerPort: 80
        volumeMounts:
        - name: search-config
          mountPath: /app/config
          readOnly: true
        - name: search-model
          mountPath: /app/model
        - name: search-cacerts
          mountPath: /app/cacerts
          readOnly: true
        - name: search-example
          mountPath: /app/example
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 3
      volumes:
      - name: search-config
        persistentVolumeClaim:
          claimName: egov-search-config-pvc-nfs
      - name: search-model
        persistentVolumeClaim:
          claimName: egov-search-model-pvc-nfs
      - name: search-cacerts
        persistentVolumeClaim:
          claimName: egov-search-cacerts-pvc-nfs
      - name: search-example
        persistentVolumeClaim:
          claimName: egov-search-example-pvc-nfs
---
apiVersion: v1
kind: Service
metadata:
  name: egov-search
  namespace: egov-app
spec:
  selector:
    app: egov-search
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30992
  type: NodePort
